--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
       script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.emailjs.com https://www.googletagmanager.com https://www.google-analytics.com;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
       img-src 'self' data: https:;
-      font-src 'self' https://fonts.gstatic.com;
+      font-src 'self' data: https://fonts.gstatic.com;
       connect-src 'self' https://*.emailjs.com https://*.google-analytics.com https://*.analytics.google.com https://*.googletagmanager.com;
       frame-src 'self';
       form-action 'self';
